QmidiCtl - A MIDI Remote Controller via UDP/IP Multicast
--------------------------------------------------------

ChangeLog


GIT HEAD

- Previously hard-coded UDP/IP multicast address (225.0.0.37) is
  now an user configurable option.

- A man page has beed added.

- Allow the build system to include an user specified LDFLAGS.


0.1.1  2013-12-31  A fifth of a Jubilee.

- More preparations for Qt5 configure build.

- Preparations for Qt5 migration.

- Make(ing) -jN parallel builds now available for the masses.

- Fixed Makefile.in handling of installation directories to the
  configure script eg. --datadir.

- Symbian^3 port (by Pedro Lopez-Cabanillas).

- Added translatable macro contextualizers.


0.1.0  2010-09-03  Second public release.

- Standard desktop icon fixing (Fremantle/Hildon).

- MIDI note and controller names (GM) added.

- Logarithmic scale configure option added.

- Message box title confidence fix (whatever it be:)

- MIDI controller assignment, any other than mostly MMC, is now
  user configurable for all widgets, buttons, sliders and knobs,
  trough the novel "Configure..." menu item. (EXPERIMENTAL)

- Dropped the "About Qt..." menu item.

- Use standard dialog buttons as provided by QDialogButtonBox.

- Attempt to comply with maemo.org extras-testing promotion.


0.0.1  2010-03-07  First public release.