@@ -52,6 +52,7 @@ for Windows (http://nerds.de).
 %dir %{_datadir}/icons/hicolor/48x48/hildon
 %dir %{_datadir}/icons/hicolor/64x64
 %dir %{_datadir}/icons/hicolor/64x64/hildon
+%dir %{_datadir}/appdata
 #dir %{_datadir}/man
 #dir %{_datadir}/man/man1
 %{_bindir}/%{name}
@@ -60,6 +61,7 @@ for Windows (http://nerds.de).
 %{_datadir}/icons/hicolor/32x32/hildon/%{name}.png
 %{_datadir}/icons/hicolor/48x48/hildon/%{name}.png
 %{_datadir}/icons/hicolor/64x64/hildon/%{name}.png
+%{_datadir}/appdata/%{name}.appdata.xml
 %{_datadir}/man/man1/%{name}.1.gz
 
 %changelog
